[package]
name = "aki-xtee"
version = "0.1.12"
authors = ["aki <aki.akaguma@hotmail.com>"]
description = """
copy standard input to each files and standard output.
"""
keywords = ["text", "filter"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2018"
repository = "https://github.com/aki-akaguma/aki-xtee"

[lib]
name = "libaki_xtee"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "aki-xtee"
path = "src/main.rs"

[features]
default = ["flate2", "xz2", "zstd"]
debian_build = []

[dependencies]
anyhow = "1.0"
flood-tide = { version="0.2", default-features=true, features=["stop_at_mm"] }
runnel = "0.3"

flate2 = { version = "=1.0.20", features = ["rust_backend"], default-features = false, optional = true }
xz2 = { version = "0.1", optional = true }
zstd = { version = "0.8", optional = true }

[dev-dependencies]

[build-dependencies]
rust-version-info-file = "0.1"
rustc_version = "0.3"

[workspace]
members = [
    "xtask",
]

[package.metadata.deb]
features = ["debian_build"]
section = "AAA-text"
priority = "optional"
maintainer = "aki <aki.akaguma@hotmail.com>"
extended-description = """\
copy standard input to each files and standard output.
"""
depends = "$auto"
separate-debug-symbols = true
assets = [
    ["target/release/aki-xtee", "usr/bin/", "755"],
    ["target/rust-version-info.txt", "usr/share/doc/aki-xtee/", "644"],
    ["README.md", "usr/share/doc/aki-xtee/", "644"],
]
