[package]
name = "aki-xtee"
version = "0.1.24"
authors = ["aki <aki.akaguma@hotmail.com>"]
description = """
copy standard input to each files and standard output.
"""
keywords = ["text", "filter"]
categories = ["command-line-utilities", "text-processing"]
license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2021"
rust-version = "1.60.0"
repository = "https://github.com/aki-akaguma/aki-xtee"

[lib]
name = "libaki_xtee"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "aki-xtee"
path = "src/main.rs"

[features]
default = ["flate2", "xz2", "zstd"]
debian_build = []

[dependencies]
anyhow = "1.0"
flood-tide = { version="0.2", default-features=true, features=["stop_at_mm"] }
runnel = "0.3"
memx-cdy = "0.1"

flate2 = { version = "1.0", features = ["rust_backend"], default-features = false, optional = true }
xz2 = { version = "0.1", optional = true }
zstd = { version = "0.12", optional = true }

[dev-dependencies]
indoc = "1.0"
exec-target = "0.2"
assert-text = "0.2"

[build-dependencies]
rust-version-info-file = "0.1"
rustc_version = "0.4"

[workspace]
members = [
    "xtask",
]

[package.metadata.deb]
features = ["debian_build"]
section = "AAA-text"
priority = "optional"
maintainer = "aki <aki.akaguma@hotmail.com>"
extended-description = """\
copy standard input to each files and standard output.
"""
depends = "$auto"
separate-debug-symbols = true
assets = [
    ["target/release/aki-xtee", "usr/bin/", "755"],
    ["target/rust-version-info.txt", "usr/share/doc/aki-xtee/", "644"],
    ["README.md", "usr/share/doc/aki-xtee/", "644"],
]
